--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,12 +8,13 @@
       <%= @post.user.name %>
     </small>
     <p><%= markdown @post.body %></p>
+    <p><%= image_tag(@post.image_url) if @post.image? %></p>
   </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>
-    <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
+    <%= link_to "Edit", edit_topic_post_path(@topic,@post,@image), class: 'btn btn-success' %>
   </div>
 </div>
 <% end %>
 
-<p><%= @post.body %></p>
+# <p><%= @post.body %></p>
