--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,12 +8,15 @@
       <%= @post.user.name %>
     </small>
     <p><%= markdown @post.body %></p>
-    <p><%= image_tag(@post.image_url) if @post.image? %></p>
+    <p><%= image_tag(@post.image_url) if @post.image? %></p> 
+    <h3>Comments</h3>
+    <%= render 'comments/comments' %>
+    <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
   </div>
+
   <div class="col-md-4">
     <% if policy(@post).edit? %>
-    <%= link_to "Edit", edit_topic_post_path(@topic,@post,@image), class: 'btn btn-success' %>
+      <%= link_to "Edit", edit_topic_post_path(@topic,@post), class: 'btn btn-success' %>
+    <% end %>
   </div>
 </div>
-<% end %>
-
