--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,7 +1,9 @@
-<div class="media">
-  <% @post.comments.each do |comment| %>
-  <div class="well">
-    <%= comment.body %>
-  </div>
-  <% end %>
-</div>
+    <% if @comments %>
+     <% @comments.each do |comment| %>
+      <h5>Comment id = <%= comment.id %></h5>
+      <p> <%= comment.body %> </p>
+      <% if can? :destroy, comment %>
+        <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+      <% end %>
+     <% end %>
+    <% end %> 
