--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
 
 <div class="row">
   <div class="col-md-8">
+    <%= render partial: 'votes/voter', locals: { topic: @topic, post: @post } %>
     <small>
       <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
       submitted <%= time_ago_in_words(@post.created_at) %> ago by
@@ -22,4 +23,11 @@
       <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
     <% end %>
   </div>
+      <div>
+      <h3><%= pluralize(@post.points, 'point') %></h3>
+      <small>
+        <%= pluralize(@post.up_votes, 'up vote') %>, 
+        <%= pluralize(@post.down_votes, 'down vote') %>
+      </small>
+    </div>
 </div>
