--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,11 +1,16 @@
-<% if @comments %>
- <% @comments.each do |comment| %>
-  <h5>Comment id = <%= comment.id %></h5>
-  <p> <%= comment.body %> </p>
-  <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar.present? %>
-
-  <% if policy(comment).destroy? %>
-    <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+<% @post.comments.each do |comment| %> 
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
+  <%= link_to '#', class: 'pull-left' do %>
+    <%= image_tag(comment.user.avatar.small.url) if comment.user.avatar? %>
   <% end %>
- <% end %>
-<% end %> 
+  <div class="media-body">
+    <small>
+      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+      <% if policy(comment).destroy? %>
+        | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+      <% end %>
+    </small>
+    <p><%= comment.body %></p>
+  </div>
+<% end %>
+<% end %>
