Ajaxified comment destruction

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -10,7 +10,7 @@
     </small>
     <p><%= markdown @post.body %></p>
     <p><%= image_tag(@post.image_url) if @post.image? %></p> 
-    <h3>Comments</h3>
+    <h4 class='js-comments-count'><%= @comments.count %> Comments</h4>
     <%= render partial: 'comments/comment', collection: @comments %>
     <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
   </div>
